# AIWeatherRouting

./: .gitignore  Cargo.toml  download_mf.py  download_sample.py  inspect_grib.py
data/: imoca_60.csv  imoca_60.html
scripts/: parse_polar.py
src/: lib.rs  main.rs
src/engine/: mask.rs  mod.rs  models.rs  physics.rs  router.rs
src/parsers/: bufr.rs  grib.rs  mod.rs  polars.rs
src/ui/: map.rs  mod.rs
